tests/should_succeed/method.jou
from "stdlib/io.jou" import printf

class Foo:
    x: int
    y: int

    def get_sum(self) -> int:
        return self->x + self->y

    def increment_x(self) -> void:
        self->x += 1

def main() -> int:
    f = Foo{x = 1, y = 2}
    printf("%d\n", f.get_sum())  # Output: 3
    f.increment_x()
    printf("%d\n", f.get_sum())  # Output: 4
    return 0
