tests/syntax_error/selft_take_arg.jou
class Foo:
    def bar(self, x: int) -> void:
        return

def main() -> int:
    f = Foo{}
    f.bar(1, 2) # Error: method bar(self: Foo*, x: int) takes 1 argument, but it was called with 2 arguments
    return 0
